# ESP32-H2-Custom-Zigbee

./: CHANGELOG.md  README.md  configure.py  make_ota.py
binaries/: smart_switch-v1.2.0.ota
smart_switch/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
smart_switch/main/: CMakeLists.txt  config.h  dimmer.c  dimmer.h  idf_component.yml  led.c  led.h  main.c  ota.c  ota.h  relay.c  relay.h  shutter.c  shutter.h  sw_config.c  sw_config.h
